# cgraphy

./: .gitignore  CITATION.cff  LICENSE  README.md  SUBMISSION.md  pyproject.toml  server.json  smithery.yaml
.github/workflows/: cgraphy-impact.yml.example
.well-known/mcp/: server-card.json
docs/superpowers/plans/: 2026-07-08-cgraphy.md
docs/superpowers/specs/: 2026-07-08-cgraphy-design.md  2026-07-08-graphy-design.md
paper/: cgraphy.tex  make_figures.py  results.json
scripts/: benchmark.py  eval_agent.py  eval_localization.py  eval_patch.py  eval_swebench.py
src/cgraphy/: cli.py  communities.py  db.py  diffctx.py  enrich_cmd.py  gitmine.py  graphq.py  indexer.py  init_cmd.py  pagerank.py  resolver.py  semantic.py  server.py  summarize.py  ts.py  viewer.py  walker.py
src/cgraphy/extract/: __init__.py  base.py  engine.py  generic.py  langs.py
src/cgraphy/static/: index.html
tests/: test_agent_tools.py  test_api_summarize.py  test_automation.py  test_cli.py  test_cli_integration.py  test_communities.py  test_db.py  test_extract_generic.py  test_extract_langs.py  test_extract_python.py  test_gitmine.py  test_graphq.py  test_indexer.py  test_init_cmd.py  test_lineage_usage.py  test_pagerank.py  test_semantic.py  test_server.py  test_summarize.py  test_ts.py  test_viewer.py  test_walker.py
