[project]
name = "cgraphy"
version = "0.1.0"
description = "Code knowledge graph over MCP: compact, token-budgeted context for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prateek Mohan Garg", email = "prateekmohangarg@gmail.com" }]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.13",
    "mcp>=1.2",
    "pathspec>=0.12",
]

[project.optional-dependencies]
summarize = ["anthropic>=0.40"]

[project.scripts]
cgraphy = "cgraphy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgraphy"]

[dependency-groups]
dev = ["pytest>=8"]
