[project]
name = "cgraphy"
version = "0.1.2"
description = "Code knowledge graph over MCP: compact, token-budgeted context for AI coding agents"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Prateek Mohan Garg", email = "prateekmohangarg@gmail.com" }]
dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-language-pack>=0.13",
    "mcp>=1.2",
    "pathspec>=0.12",
]

[project.urls]
Homepage = "https://github.com/pmgarg/cgraphy"
Documentation = "https://github.com/pmgarg/cgraphy#readme"
Repository = "https://github.com/pmgarg/cgraphy"
Issues = "https://github.com/pmgarg/cgraphy/issues"
Changelog = "https://github.com/pmgarg/cgraphy/releases"
PyPI = "https://pypi.org/project/cgraphy/"

[project.optional-dependencies]
summarize = ["anthropic>=0.40"]
semantic = ["model2vec>=0.3"]

[project.scripts]
cgraphy = "cgraphy.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cgraphy"]

[dependency-groups]
dev = ["pytest>=8"]
